[project]
name = "shdd"
version = "0.1.0"
description = "youtube video downloader"
authors = [
    {name = "Uladzimir Kandraciuk",email = "146672155+Wl0cKk@users.noreply.github.com"}
]
license = {text = "MIT License"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "kivy (>=2.3.1,<3.0.0)",
    "yt-dlp (>=2025.9.26,<2026.0.0)",
    "buildozer (>=1.5.0,<2.0.0)",
    "setuptools (>=80.9.0,<81.0.0)",
    "cython (>=3.1.4,<4.0.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
